results/SVCOMP/4-shot/log-ExSymExeD2L-2024_03_18_20_09_40.txt
class Main {

  //@ requires 0.0 <= x && x <= Long.MAX_VALUE / 2;
  //@ ensures \result ==> x > 0;
  public static boolean f() {
    double x = Verifier.nondetDouble();
    if (x >= 0.0 && x <= Long.MAX_VALUE / 2) {
      Main inst = new Main();
      return inst.test(x);
    }
    return true;
  }

  //@ requires 0.0 <= x;
  //@ ensures \result ==> x > 0;
  public boolean test(double x) {

    long res = (long) ++x;
    if (res > 0) System.out.println("x >0");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeD2L.java:3: error: cannot find symbol
  //@ requires 0.0 <= x && x <= Long.MAX_VALUE / 2;
                      ^
  symbol:   variable x
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExeD2L.java:3: error: cannot find symbol
  //@ requires 0.0 <= x && x <= Long.MAX_VALUE / 2;
                           ^
  symbol:   variable x
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExeD2L.java:4: error: cannot find symbol
  //@ ensures \result ==> x > 0;
                          ^
  symbol:   variable x
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExeD2L.java:6: error: cannot find symbol
    double x = Verifier.nondetDouble();
               ^
  symbol:   variable Verifier
  location: class Main
4 errors

